substrate/frame/election-provider-support/solution-type/tests/ui/fail/missing_voter.stderr
error: Expected binding: `VoterIndex = ...`
  --> tests/ui/fail/missing_voter.rs:21:2
   |
21 |     u16,
   |     ^^^
